--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #ffeedf;
     font-family: 'Space Grotesk', sans-serif;
-
+    height: 100vh;
 }
 
 #HeaderDiv {
@@ -17,30 +17,105 @@ body {
     left: 0;
     border-bottom: 1px solid #145434;
     padding: 0% 1%;
-    color:#145434;
+    color: #145434;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
     align-content: center;
 }
 
-.material-symbols-outlined {
-position: relative;
-top: 3px;
+#HeaderDiv .material-symbols-outlined {
+    position: relative;
+    top: 3px;
 }
+
 
 
 #ContainerDiv {
     padding-top: 50px;
+    min-height: 100vh;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    gap: 3rem;
 }
 
+.RowDiv {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 3rem;
+    height: 40%;
+}
 
 
 #BeerCard {
     background-color: #145434;
+    height: 100%;
+    padding: 2rem;
+    flex: 0 0 30%;
+    display: flex;
+    flex-direction: column;
 }
 
+#BeerCard h1 {
+    padding-bottom: 1em;
+    color: #ffeedf;
+    font-weight: 400;
+    position: relative;
+}
+
+.BeerName {
+    color: #ffeedf;
+    padding-top: 0.6em;
+}
+
+.BeerType {
+    color: #ffeedf;
+    padding-top: 0.3em;
+    font-weight: 700;
+}
+
+.CardNumber {
+    height: 1.5em;
+    width: 1.5em;
+    background-color: #ffeedf;
+    border: 2px solid #145434;
+    border-radius: 50%;
+    color: #145434;
+    font-size: 1.5em;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+
+    position: absolute;
+    transform: translate(-2em, -2em);
+}
+
+.BeerDetails {
+    height: 3.2em;
+    width: 13em;
+    background-color: #ffeedf;
+    border: 2px solid #145434;
+    color: #145434;
+    margin-top: -1em;
+    padding: 0.8em;
+    font-size: 0.8em;
+    font-weight: 600;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 2em;
+    align-self: flex-end;
+    transform: translate(3.2em, 3.2em);
+}
+
+#HeaderDiv .material-symbols-outlined {
+    position: relative;
+    bottom: 3px;
+}
 
 
 
@@ -48,18 +123,11 @@ top: 3px;
 .material-symbols-outlined {
     font-variation-settings:
         'FILL' 0,
-        'wght' 400,
+        'wght' 800,
         'GRAD' 0,
         'opsz' 48
 }
 
-.material-symbols-outlined {
-    font-variation-settings:
-        'FILL' 0,
-        'wght' 400,
-        'GRAD' 0,
-        'opsz' 48
-}
 
 /* 
 @font-face {
