--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Enjoy your spagetti meal, Bálint :D */
+
 * {
     margin: 0;
     padding: 0;
@@ -7,8 +9,17 @@
 body {
     background-color: #ffeedf;
     font-family: 'Space Grotesk', sans-serif;
-    height: 100vh;
+    min-height: 100vh;
 }
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 800,
+        'GRAD' 0,
+        'opsz' 48
+}
+
 
 #HeaderDiv {
     position: fixed;
@@ -16,7 +27,7 @@ body {
     right: 0;
     left: 0;
     border-bottom: 1px solid #145434;
-    padding: 0% 1%;
+    padding: 0.4% 1%;
     color: #145434;
     font-weight: bold;
     display: flex;
@@ -24,15 +35,19 @@ body {
     align-content: center;
 }
 
+#HeaderDiv h2 {
+    font-size: 2em;
+    font-weight: 700;
+}
+
 #HeaderDiv .material-symbols-outlined {
     position: relative;
-    top: 3px;
+    top: 9px;
 }
 
 
-
 #ContainerDiv {
-    padding-top: 50px;
+    padding-top: 65px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -43,18 +58,19 @@ body {
 
 .RowDiv {
     display: flex;
-    flex-flow: row wrap;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 3rem;
-    height: 40%;
+    min-height: 40%;
 }
-
 
 #BeerCard {
     background-color: #145434;
     height: 100%;
+    min-width: 350px;
     padding: 2rem;
-    flex: 0 0 30%;
+    flex-shrink: 0;
+    flex-basis: 30%;
     display: flex;
     flex-direction: column;
 }
@@ -84,12 +100,11 @@ body {
     border: 2px solid #145434;
     border-radius: 50%;
     color: #145434;
-    font-size: 1.5em;
+    font-size: 1.4em;
     font-weight: 300;
     display: flex;
     justify-content: center;
     align-content: center;
-
     position: absolute;
     transform: translate(-2em, -2em);
 }
@@ -111,26 +126,3 @@ body {
     align-self: flex-end;
     transform: translate(3.2em, 3.2em);
 }
-
-#HeaderDiv .material-symbols-outlined {
-    position: relative;
-    bottom: 3px;
-}
-
-
-
-
-.material-symbols-outlined {
-    font-variation-settings:
-        'FILL' 0,
-        'wght' 800,
-        'GRAD' 0,
-        'opsz' 48
-}
-
-
-/* 
-@font-face {
-    font-family: 'Space Grotesk', sans-serif;
-    src: url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
-} */
